@@ -1,5 +1,12 @@
 2012-02-03  Rene Liebscher <R.Liebscher@gmx.de>
 
+	patch #7687: Autogenerating programmers and parts lists for docs
+	(generating the programmers lists)
+	* doc/avrdude.texi: Add include of generated table of programmers
+	* doc/Makefile.am: Add generating of table of programmers in programmers.texi
+
+2012-02-03  Rene Liebscher <R.Liebscher@gmx.de>
+
 	bug #34768 Proposition: Change the name of the AVR32 devices
 	* avrdude.conf.in: renamed ucr2 to uc3a0512
 	* avrpart.c: added cast to avoid compiler warning
